test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_multiple.rs
use clapi::macros::*;

#[command]
#[option(x, multiple="xyz")]
fn app(x: i64){}

fn main(){}