test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_multiple.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_multiple.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `multiple` must be a bool literal
